<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_cities">Search Location</string>
    <string name="add_cities_message">Please tap \"+\" on menu to add cities</string>
    <string name="exception">Something went wrong. Please try again</string>
    <string name="location_add_success">Location Added Successfully </string>
    <string name="location_already_exists">Sorry, Location Already Exists</string>
    <string name="city_empty">Please enter city</string>
    <string name="no_internet">Please verify your Internet connection and try again.</string>
    <string name="no_gps">Please enable GPS for current location.</string>
    <string name="ops">Ops..</string>
    <string name="save_location">Save Location</string>
    <string name="save_location_confirm">Are you sure you want to save </string>


    <color name="main_blue">#03a9f5</color>
    <color name="light_green">#A7BF4E</color>
    <color name="green_text">#b6103806</color>
    <color name="light_red">#E45C2A</color>


    <!--extra color-->

    <color name="gray_text">#7f7f7f</color>
    <color name="btn_select">#EE6C80</color>

    <color name="bg_gray">#CCCCCC</color>
    <color name="gray">#ededed</color>
    <color name="text_light_gray">#666666</color>
    <color name="text_black">#000000</color>
    <color name="colorPrimary">#607D8B</color>

    <color name="windowBackground">#B0BEC5</color>
    <color name="colorAccent">#000000</color>

    <string name="title_activity_add_city">Add City</string>
    <string name="serach">Search</string>
    <string name="type_city_name">Type city name</string>
    <string name="title_activity_weather_show">weatherShowActivity</string>
    <string name="temp">Temp.</string>
    <string name="feels_like">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="per">%</string>
    <string name="precipitation">precip.</string>
    <string name="mm">mm</string>
    <string name="pressure">Pressure</string>
    <string name="mbar">mbar</string>
    <string name="wind">Wind </string>
    <string name="wind_speed">Wind Spd</string>
    <string name="visibility">Visibility</string>
    <string name="km">km</string>
    <string name="cloudcover">Cloud</string>

</resources>
