<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="wth.com.hseya.weatherapp.activity.WeatherShowActivity">

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="12:21 PM"
        android:textColor="@android:color/white"
        android:visibility="gone" />


    <TextView
        android:id="@+id/destextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_blue"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:text="Sunny"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_blue"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tempCTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0\u00B0C"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temFTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0\u00B0f"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <wth.com.hseya.weatherapp.ui.CircularImageView
                android:id="@+id/weatherIconImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center"
                android:src="@drawable/dummy_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feels_like"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/feelLikeCTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0\u00B0C"
                android:textColor="@android:color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feelLikeFTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0\u00B0f"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/humidity"
                    android:textColor="@color/main_blue"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/humidityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/per"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/precipitation"
                    android:textColor="@color/main_blue"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/precipitationTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mm"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/pressure"
                    android:textColor="@color/main_blue"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/pressureTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView73"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mbar"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/wind"
                    android:textColor="@color/main_blue"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/windTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="50sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/windParaTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="km/h W"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/visibility"
                    android:textColor="@color/main_blue"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/visibilityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView75"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/km"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/blue_border"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView56"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:paddingTop="5dp"
                    android:text="@string/cloudcover"
                    android:textColor="@color/main_blue"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/cloudTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView76"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/per"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
